[workspace]
members = [
    "src/shared",
    "src/can_bank",
    "src/can_humans",
    "src/can_tasks",
    "src/can_votings",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
serde = "1.0"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-certificate-verification = "2.4"
ic-certification = "2.5"
ic-cbor = "2.5"
icrc-ledger-types = "0.1.5"
garde = { version = "0.18", features = ["derive", "url", "unicode"] }
html-escape = "0.2"
url = "2.5"
async-trait = "0.1"
lazy_static = "1.4"
leb128 = "0.2"
