[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-certificate-verification = { workspace = true }
ic-certification = { workspace = true }
ic-cbor = { workspace = true }
garde = { workspace = true }
icrc-ledger-types = { workspace = true }
html-escape = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
lazy_static = { workspace = true }

[build-dependencies]
dotenv = "0.15"
